# linux

./: .gitignore  AGENTS.md
000_cpp/: makefile  test.cpp
000_tmp/: makefile  test.cpp
001_pthread/src/: my_task.hpp
001_pthread_2/: makefile
001_pthread_2/src/: Main.cpp  Thread.hpp
001_thread/: makefile
001_thread/src/: test.cpp
002_thread/: test.cpp  test2.cpp
003_mutex/: test.cpp
004_block_queue/: BlockQueue.hpp  BlockQueue.hpp-backup  Cond.hpp  Mutex.hpp  main.cpp  makefile  test
005_block_queue_based_ring/: Makefile  main.cpp
005_block_queue_based_ring/src/: RingQueue.hpp
005_block_queue_based_ring_cycle/: Main.cpp  RingQueue.hpp
005_block_queue_based_ring_cycle/src/: RingQueue.hpp
006_sem/src/: Sem.hpp
007_log/: main.cpp
007_log/src/: log.hpp
008_thread_pool/: Makefile  main.cpp
008_thread_pool/src/: Mutex.hpp  Task.hpp  Thread.hpp  ThreadPool.hpp
009_udp/: main.cpp  start.sh
009_udp/client/: Makefile  UdpEchoClient.cpp
009_udp/server/: Makefile  UdpEchoServer.cpp
009_udp/src/: UdpEchoClient.cpp  UdpEchoServer.hpp
010_ipv4_tarns_netw/: main.cpp
011_dict/: Client.cpp  Makefile
011_dict/client/: Client.cpp  Makefile  client
011_dict/resource/: Dictionary.ini
011_dict/server/: Makefile  Server.cpp  server
011_dict/src/: DictServer.hpp  InetManager.hpp  UdpServer.hpp
012_chatroom/: CMakeLists.txt  chatClient.cpp  chatServer.cpp  config.ini
012_chatroom/src/: CallbackTypes.hpp  ChatClient.hpp  Config.hpp  InetAddr.hpp  InetManager-backup  InetManager.hpp  IniParse.hpp  Log.hpp  Mutex.hpp  Route.hpp  RouteServer.hpp  Thread.hpp  ThreadPool.hpp  UdpServer.hpp  UdpSocket.hpp  User.hpp  log.hpp
013_udpechoserver/: CMakeLists.txt  TcpEchoClient.cpp  TcpEchoServer.cpp
013_udpechoserver/src/: InetAddr.hpp  Mutex.hpp  TcpEchoServer.hpp  TcpSocket.hpp  ThreadPool.hpp
CMake_/: CMakeLists.txt  main.cpp
CMake_/test_inc/: CMakeLists.txt
CMake_/test_inc/sub/: sub.cmake
Json-Rpc/: CMakeLists.txt  main.cpp
Json-Rpc/demo/jsoncpp/: jsoncpp.cpp
Json-Rpc/utils/: JsonTrans.hpp
cpp20L/: CMakeLists.txt  main.cpp
demo1/: CMakeLists.txt
http_server/: Buffer.hpp  CMakeLists.txt  HttpData.hpp  HttpParser.hpp  Server.cpp  TcpConnection.hpp  TcpServer.hpp
http_server/public/: 404.html  about.html  dashboard.html  deprecated_page.html  index.html  login.html  posts.html  register.html
io/: CMakeLists.txt  SelectServer.hpp  main.cpp
io/demo/: PollServer.hpp  SelectServer.hpp
io/epoll/: EpollServer.hpp
io/utils/: TcpServer.hpp
lcore/: CMakeLists.txt  main.c
math/: test.ipynb
math/001层次分析法/: 1-层次分析法.ipynb  test.mlx  层次分析法.xlsx
math/002Topsis/: Inter2Max.m  (+7 more)
pb/: CMakeLists.txt  contacts.pb.cc  contacts.proto  main.cpp  usage
pb/client/: Client.hpp  main.cpp
pb/common/: Common.hpp  ContactException.hpp  add_contact.pb.cc  add_contact.pb.h  add_contact.proto
pb/pb2/: contacts.pb.h  main
pb/pb3/: Makefile  contacts.pb.cc  contacts.pb.h  contacts.proto  read.cc  wirte.cc  write.cc
pb/server/: Server.hpp  main.cpp
pb/utils/: ReadUtils.hpp
reactor/: CMakeLists.txt  Common.hpp  Connection.hpp  HttpProtocol.hpp  IOHandler.cpp  IOHandler.h  IOHandler.hpp  Listener.cpp  Listener.h  Listener.hpp  Main.cpp  Poller.hpp  Protocol.hpp  Reactor.hpp  TcpServer.hpp
reactor/core/: Connection.hpp  Poller.hpp  Reactor.hpp
reactor/epoll/: EpollServer.hpp
reactor/http/: HttpConnection.cpp  HttpConnection.h  HttpProtocol.hpp
reactor/network/: Listener.cpp  Listener.h  TcpConnection.cpp  TcpConnection.h  TcpSocket.hpp
reactor/utils/: Buffer.hpp  InetAddr.hpp  TcpSocket.hpp
snake/: .gitignore  CMakeLists.txt  Makefile  config.json  launch.cpp  常用接口.md  模板.cpp
snake/src/: Conf.hpp  Food.hpp  Frame.hpp  Game.hpp  Snake.hpp  main.cpp
snake/src/file_system/: FileUtils.hpp
snake/src/thread/: Thread.hpp  ThreadPool.hpp
symnet/: CMakeLists.txt
symnet/examples/: Client.cpp
symnet/examples/src/: TcpEchoServer.hpp
symnet/http_server/: Server.cpp  http请求与响应格式.md
symnet/http_server/src/: DataType.hpp  HttpParser.hpp  HttpProtocol.hpp  HttpSerializer.hpp  HttpServer.hpp  TcpServer.hpp
symnet/lib/: CMakeLists.txt
symnet/lib/include/network/: SocketUtils.hpp  TcpCSocket.hpp  TcpSSocket.hpp  TcpSocket.hpp  UdpSocket.hpp
symnet/lib/include/thread/: Cond.hpp  Thread.hpp  ThreadPool.hpp
symnet/lib/include/utils/: Conf.hpp  InetAddr.hpp  IniParse.hpp  Log.hpp
symnet/lib/src/network/: SocketUtil.cpp
symnet/online_calculator/: Client.cpp  Server.cpp
symnet/online_calculator/backup/: Protocol.hpp
symnet/online_calculator/src/: CalcTypes.hpp  Daemon.hpp  JsonSerializer.hpp  TcpServer.hpp  Usage.md
symnet/tcpcmdserver/: Client.cpp  Server.cpp
symnet/tcpcmdserver/src/: ExecuteCommand.hpp  TcpServer.hpp
symnet/tcpechoserver/: Client.cpp  Server.cpp
symnet/tcpechoserver/src/: TcpEchoServer.hpp
symnet/utils/: CMakeLists.txt  README.md  config.ini
symnet/utils/include/network/: SocketUtils.h  TcpCSocket.hpp  TcpSSocket.hpp  TcpSocket.hpp
symnet/utils/include/slog/: Log.h
symnet/utils/include/snet/: Protocol.hpp  Serializer.hpp  Socket.hpp  TcpSocket.hpp  UdpSocket.hpp
symnet/utils/include/thread/: Thread.hpp  ThreadPool.hpp
symnet/utils/include/utils/: Conf.hpp  InetAddr.hpp  IniParse.hpp
symnet/utils/module/: SymINet.h  SymLog.h  SymNet.h  SymThread.h
symnet/utils/src/network/: SocketUtils.cpp
symnet/utils/src/slog/: CombinedLogStrategy.cpp  ConsoleLogStrategy.cpp  FileLogStrategy.cpp  Log.cpp  LogMsg.cpp  LogStrategyVirtual.cpp  Logger.cpp
symnet/utils/sym/: Conf.hpp  InetAddr.hpp  IniParse.hpp  Mutex.hpp  README.md  Thread.hpp  UdpSocket.hpp
symudio/: CMakeLists.txt  Client.cpp  Server.cpp  main.cpp
symudio/doc/: a.md  symudio
symudio/entity/: Any.hpp  Buffer.hpp  Channel.cpp  Channel.h  Connect.hpp  Connection.hpp  EventLoop.cpp  EventLoop.h  Poller.cpp  Poller.h  Socket.hpp  TimerWheel.cpp  TimerWheel.h
symudio/utils/: Log.hpp  TimerWheel.hpp
udp_server/: CMakeLists.txt
untitled/: CMakeLists.txt  dialog.hpp  main.cpp  mainwindow.hpp
ysqy/: CMakeLists.txt  main.cpp
(+24 files in other folders)
